close creativecommons/creativecommons.org#457 -  fix horizontal scrolling in FAQ (FF38)

--- a/cc/scss/base/_elements.scss
+++ b/cc/scss/base/_elements.scss
@@ -493,3 +493,14 @@ blockquote {
     }
   }
 }
+
+// Image fix for FF38 (faq)
+.page-static {
+  .static-page {
+    div#main {
+      .img-responsive {
+        width: 100%;
+      }      
+    }
+  }
+}
